external/qt-everywhere-opensource-src-5.4.1/qtxmlpatterns/tests/auto/xmlpatternsdiagnosticsts/TestSuite/Queries/XQuery/ShouldFail/fail-3.xq
"This query is fully valid, and consists of one string literal."